Fixed title wrapping

--- a/app/routes/projects.webdev/intro.module.css
+++ b/app/routes/projects.webdev/intro.module.css
@@ -125,8 +125,7 @@
   transform: translate3d(0, 0, 0);
 }
 
-.title {
-  white-space: nowrap;
+.title {  
   margin-top: var(--space5XL);
   opacity: 0;
   transition: opacity var(--durationXL) ease var(--durationM);
